Added one-hot encoding section to frequent_itemsets_analysis.ipynb (Levin)

--- a/frequent_itemsets_analysis.ipynb
+++ b/frequent_itemsets_analysis.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c302191f",
    "metadata": {},
    "outputs": [
@@ -64,38 +64,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>rice, water, bananas, cheese, potatoes, grapes</td>\n",
+       "      <td>oranges, coffee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>toilet paper, onions, beef, potatoes, lettuce</td>\n",
+       "      <td>juice, water, bread, lettuce</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>pasta, carrots</td>\n",
+       "      <td>beans, carrots, coffee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>onions, soda</td>\n",
+       "      <td>beans, cookies</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>bananas, toilet paper</td>\n",
+       "      <td>cheese, beef, soda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      Transaction\n",
-       "0  rice, water, bananas, cheese, potatoes, grapes\n",
-       "1   toilet paper, onions, beef, potatoes, lettuce\n",
-       "2                                  pasta, carrots\n",
-       "3                                    onions, soda\n",
-       "4                           bananas, toilet paper"
+       "                    Transaction\n",
+       "0               oranges, coffee\n",
+       "1  juice, water, bread, lettuce\n",
+       "2        beans, carrots, coffee\n",
+       "3                beans, cookies\n",
+       "4            cheese, beef, soda"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +167,392 @@
     "\n",
     "###  Student Responsible: Levin\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f1b37519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>apples</th>\n",
+       "      <th>bananas</th>\n",
+       "      <th>beans</th>\n",
+       "      <th>beef</th>\n",
+       "      <th>bread</th>\n",
+       "      <th>butter</th>\n",
+       "      <th>carrots</th>\n",
+       "      <th>cereal</th>\n",
+       "      <th>cheese</th>\n",
+       "      <th>chicken</th>\n",
+       "      <th>...</th>\n",
+       "      <th>oranges</th>\n",
+       "      <th>pasta</th>\n",
+       "      <th>potatoes</th>\n",
+       "      <th>rice</th>\n",
+       "      <th>soda</th>\n",
+       "      <th>tea</th>\n",
+       "      <th>toilet paper</th>\n",
+       "      <th>tomatoes</th>\n",
+       "      <th>water</th>\n",
+       "      <th>yogurt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2996</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2997</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2998</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2999</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      apples  bananas  beans   beef  bread  butter  carrots  cereal  cheese  \\\n",
+       "0      False    False  False  False  False   False    False   False   False   \n",
+       "1      False    False  False  False   True   False    False   False   False   \n",
+       "2      False    False   True  False  False   False     True   False   False   \n",
+       "3      False    False   True  False  False   False    False   False   False   \n",
+       "4      False    False  False   True  False   False    False   False    True   \n",
+       "...      ...      ...    ...    ...    ...     ...      ...     ...     ...   \n",
+       "2995   False    False  False  False  False   False    False    True   False   \n",
+       "2996    True    False  False  False   True   False     True   False   False   \n",
+       "2997   False     True   True   True  False    True    False   False   False   \n",
+       "2998    True    False   True  False  False    True    False   False   False   \n",
+       "2999   False    False  False   True  False   False    False   False   False   \n",
+       "\n",
+       "      chicken  ...  oranges  pasta  potatoes   rice   soda    tea  \\\n",
+       "0       False  ...     True  False     False  False  False  False   \n",
+       "1       False  ...    False  False     False  False  False  False   \n",
+       "2       False  ...    False  False     False  False  False  False   \n",
+       "3       False  ...    False  False     False  False  False  False   \n",
+       "4       False  ...    False  False     False  False   True  False   \n",
+       "...       ...  ...      ...    ...       ...    ...    ...    ...   \n",
+       "2995     True  ...     True  False     False  False  False   True   \n",
+       "2996    False  ...    False  False     False  False  False  False   \n",
+       "2997    False  ...    False  False     False  False  False  False   \n",
+       "2998     True  ...    False  False     False  False  False  False   \n",
+       "2999    False  ...    False  False     False  False  False  False   \n",
+       "\n",
+       "      toilet paper  tomatoes  water  yogurt  \n",
+       "0            False     False  False   False  \n",
+       "1            False     False   True   False  \n",
+       "2            False     False  False   False  \n",
+       "3            False     False  False   False  \n",
+       "4            False     False  False   False  \n",
+       "...            ...       ...    ...     ...  \n",
+       "2995         False     False  False   False  \n",
+       "2996         False      True  False   False  \n",
+       "2997         False     False  False   False  \n",
+       "2998         False     False  False   False  \n",
+       "2999         False     False  False    True  \n",
+       "\n",
+       "[3000 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Importing the TransactionEncoder class from mlxtend\n",
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "\n",
+    "# Initializing the encoder object\n",
+    "te = TransactionEncoder()\n",
+    "# Fitting the encoder to the transaction data and transform it to a boolean array\n",
+    "# This will return a 2D array where each row represents a transaction and each column represents an item\n",
+    "# The value will be True if the item is in that transaction, otherwise False\n",
+    "te_ary = te.fit(transactions).transform(transactions)\n",
+    "\n",
+    "# Converting the boolean array to a DataFrame with column names as item names\n",
+    "# Each column now corresponds to an item, and each row is a transaction with True/False values\n",
+    "df_encoded = pd.DataFrame(te_ary, columns=te.columns_)\n",
+    "\n",
+    "df_encoded # displaying the data\n"
+   ]
   }
  ],
  "metadata": {
@@ -185,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
