--- a/frequent_itemsets_analysis.ipynb
+++ b/frequent_itemsets_analysis.ipynb
@@ -64,35 +64,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>oranges, coffee</td>\n",
+       "      <td>tea, coffee, water, toilet paper, pasta, carro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>juice, water, bread, lettuce</td>\n",
+       "      <td>cheese, potatoes, cereal, lettuce</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>beans, carrots, coffee</td>\n",
+       "      <td>water, toilet paper, oranges, cookies, pasta, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>beans, cookies</td>\n",
+       "      <td>butter, cereal, ice cream, oranges, potatoes, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>cheese, beef, soda</td>\n",
+       "      <td>butter, bananas, tomatoes, milk, lettuce, pota...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Transaction\n",
-       "0               oranges, coffee\n",
-       "1  juice, water, bread, lettuce\n",
-       "2        beans, carrots, coffee\n",
-       "3                beans, cookies\n",
-       "4            cheese, beef, soda"
+       "                                         Transaction\n",
+       "0  tea, coffee, water, toilet paper, pasta, carro...\n",
+       "1                  cheese, potatoes, cereal, lettuce\n",
+       "2  water, toilet paper, oranges, cookies, pasta, ...\n",
+       "3  butter, cereal, ice cream, oranges, potatoes, ...\n",
+       "4  butter, bananas, tomatoes, milk, lettuce, pota..."
       ]
      },
      "execution_count": 2,
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f1b37519",
    "metadata": {},
    "outputs": [
@@ -227,20 +227,20 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,22 +249,22 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -275,67 +275,67 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -366,22 +366,22 @@
        "    <tr>\n",
        "      <th>2995</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -389,13 +389,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2996</th>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -406,56 +406,56 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2997</th>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2998</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -463,12 +463,12 @@
        "      <th>2999</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
@@ -481,7 +481,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -490,48 +490,48 @@
       ],
       "text/plain": [
        "      apples  bananas  beans   beef  bread  butter  carrots  cereal  cheese  \\\n",
-       "0      False    False  False  False  False   False    False   False   False   \n",
-       "1      False    False  False  False   True   False    False   False   False   \n",
-       "2      False    False   True  False  False   False     True   False   False   \n",
-       "3      False    False   True  False  False   False    False   False   False   \n",
-       "4      False    False  False   True  False   False    False   False    True   \n",
+       "0      False    False  False  False  False   False     True   False   False   \n",
+       "1      False    False  False  False  False   False    False    True    True   \n",
+       "2      False    False   True  False  False   False    False   False   False   \n",
+       "3      False    False  False  False  False    True    False    True   False   \n",
+       "4      False     True  False  False  False    True    False   False   False   \n",
        "...      ...      ...    ...    ...    ...     ...      ...     ...     ...   \n",
-       "2995   False    False  False  False  False   False    False    True   False   \n",
-       "2996    True    False  False  False   True   False     True   False   False   \n",
-       "2997   False     True   True   True  False    True    False   False   False   \n",
-       "2998    True    False   True  False  False    True    False   False   False   \n",
-       "2999   False    False  False   True  False   False    False   False   False   \n",
+       "2995   False     True  False  False   True   False    False   False   False   \n",
+       "2996   False    False  False  False   True   False    False   False   False   \n",
+       "2997   False    False  False  False  False   False     True   False   False   \n",
+       "2998   False    False  False   True   True   False    False   False   False   \n",
+       "2999   False    False   True  False  False   False     True    True   False   \n",
        "\n",
        "      chicken  ...  oranges  pasta  potatoes   rice   soda    tea  \\\n",
-       "0       False  ...     True  False     False  False  False  False   \n",
-       "1       False  ...    False  False     False  False  False  False   \n",
-       "2       False  ...    False  False     False  False  False  False   \n",
-       "3       False  ...    False  False     False  False  False  False   \n",
-       "4       False  ...    False  False     False  False   True  False   \n",
+       "0       False  ...    False   True      True  False  False   True   \n",
+       "1       False  ...    False  False      True  False  False  False   \n",
+       "2       False  ...     True   True     False   True  False  False   \n",
+       "3       False  ...     True  False      True  False  False  False   \n",
+       "4       False  ...    False  False      True  False  False  False   \n",
        "...       ...  ...      ...    ...       ...    ...    ...    ...   \n",
-       "2995     True  ...     True  False     False  False  False   True   \n",
+       "2995    False  ...    False  False     False  False  False  False   \n",
        "2996    False  ...    False  False     False  False  False  False   \n",
-       "2997    False  ...    False  False     False  False  False  False   \n",
-       "2998     True  ...    False  False     False  False  False  False   \n",
+       "2997    False  ...     True  False      True  False  False   True   \n",
+       "2998    False  ...    False  False     False  False   True  False   \n",
        "2999    False  ...    False  False     False  False  False  False   \n",
        "\n",
        "      toilet paper  tomatoes  water  yogurt  \n",
-       "0            False     False  False   False  \n",
-       "1            False     False   True   False  \n",
-       "2            False     False  False   False  \n",
-       "3            False     False  False   False  \n",
-       "4            False     False  False   False  \n",
+       "0             True     False   True   False  \n",
+       "1            False     False  False   False  \n",
+       "2             True     False   True   False  \n",
+       "3            False      True  False   False  \n",
+       "4            False      True  False   False  \n",
        "...            ...       ...    ...     ...  \n",
        "2995         False     False  False   False  \n",
-       "2996         False      True  False   False  \n",
-       "2997         False     False  False   False  \n",
-       "2998         False     False  False   False  \n",
-       "2999         False     False  False    True  \n",
+       "2996          True     False  False   False  \n",
+       "2997         False     False  False    True  \n",
+       "2998         False      True  False   False  \n",
+       "2999         False     False  False   False  \n",
        "\n",
        "[3000 rows x 30 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,6 +553,75 @@
     "\n",
     "df_encoded # displaying the data\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c09ce10b",
+   "metadata": {},
+   "source": [
+    "##  Task 3: Find Frequent Itemsets using the Apriori Algorithm\n",
+    "\n",
+    "\n",
+    "We mine the frequent items that support ≥ 0.05 by using`apriori()` algorithm in the `mlxtend.frequent_patterns` module.\n",
+    "\n",
+    "The output is the top ten items and their respective support value\n",
+    "###  Student Responsible: Ted Korir\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c6a47a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 frequent itemsets (min_support = 0.05):\n",
+      "    support   itemsets\n",
+      "0  0.147333   {apples}\n",
+      "1  0.151667  {bananas}\n",
+      "2  0.158000    {beans}\n",
+      "3  0.142667     {beef}\n",
+      "4  0.146000    {bread}\n",
+      "5  0.156667   {butter}\n",
+      "6  0.156333  {carrots}\n",
+      "7  0.147667   {cereal}\n",
+      "8  0.157000   {cheese}\n",
+      "9  0.142000  {chicken}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "#  Importing library\n",
+    "from mlxtend.frequent_patterns import apriori\n",
+    "\n",
+    "# Loading the transactions\n",
+    "trans_df = pd.read_csv(\"supermarket_transactions.csv\")     \n",
+    "transactions = tx_df[\"Transaction\"].str.split(\", \")\n",
+    "\n",
+    "#  One‑hot encoding\n",
+    "item_pool = sorted({item for basket in transactions for item in basket})\n",
+    "encoded_rows = [{item: (item in basket) for item in item_pool} for basket in transactions]\n",
+    "df = pd.DataFrame(encoded_rows)\n",
+    "\n",
+    "# 4. Mining frequent itemsets (support ≥ 0.05)\n",
+    "frequent_itemsets = apriori(df, min_support=0.05, use_colnames=True)\n",
+    "frequent_itemsets[\"itemsets\"] = frequent_itemsets[\"itemsets\"].apply(set)\n",
+    "\n",
+    "# [Student: <your‑name>] 5. Sort by support \n",
+    "frequent_itemsets.sort_values(\"support\", ascending=False, ignore_index=True)\n",
+    "\n",
+    "\n",
+    "# Display top‑10\n",
+    "print(\"\\nTop 10 frequent itemsets (min_support = 0.05):\")\n",
+    "print(frequent_itemsets.head(10))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -571,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
